--- a/index.html
+++ b/index.html
@@ -252,6 +252,53 @@
                         </div>    
 
                             <div class="row pt-lg-5 js-scroll slide-right flex-wrap">
+                                <!-- project 7 -->
+                                <div class="col-md-4">
+                                    <div class="services-thumb-new">
+                                        <div class="d-flex flex-wrap align-items-center border-bottom mb-4 pb-3">
+                                            <h3 class="mb-0">Project 7</h3>
+
+                                            <div class="services-price-wrap ms-auto">
+                                                <p class="services-price-text mb-0 code"><img src="icons-programs/Golang.png" class="hover-code" alt="golang"></p>
+                                                <div class="services-price-overlay"></div>
+                                            </div>
+                                        </div>
+
+                                        <div class="swiper swiper-new">
+                                            <div class="swiper-wrapper">
+                                                <div class="img-new-prj mb-2 swiper-slide">
+                                                    <a data-fslightbox href="project-image7/dashboard-2.png">
+                                                        <img src="project-image7/dashboard-2.png" alt="img project 7">
+                                                    </a>
+                                                </div>
+                                                <div class="img-new-prj mb-2 swiper-slide">
+                                                    <a data-fslightbox href="project-image7/reports-g.png">
+                                                        <img src="project-image7/reports-g.png" alt="img project 7">
+                                                    </a>
+                                                </div>
+                                                <div class="img-new-prj mb-2 swiper-slide">
+                                                    <a data-fslightbox href="project-image7/task-g.png">
+                                                        <img src="project-image7/task-g.png" alt="img project 7">
+                                                    </a>
+                                                </div>
+                                                <div class="img-new-prj mb-2 swiper-slide">
+                                                    <a data-fslightbox href="project-image7/settings-g.png">
+                                                        <img src="project-image7/settings-g.png" alt="img project 7">
+                                                    </a>
+                                                </div>
+                                            </div>
+                                            <div class="swiper-pagination swiper-pagination-new"></div>
+                                            <div class="swiper-button-prev swiper-button-prev-new"></div>
+                                            <div class="swiper-button-next swiper-button-next-new"></div>
+                                        </div>
+
+
+                                        <p class="descript-web">Membuat Sistem Informasi Manajemen Task dengan Golang Versi go1.25.1. Untuk informasi Lebih lanjut tentang website ini silahkan klik <b>lihat selengkapnya.</b>
+
+                                        <p><a href="project/project-7.html" target="_blank" class="custom-btn custom-border-btn btn mt-2">lihat selengkapnya</a></p>
+
+                                    </div>
+                                </div>
                                 <!-- project 6 -->
                                 <div class="col-md-4">
                                     <div class="services-thumb-new">
@@ -590,6 +637,10 @@
                                     <h3 class="pe-5 text-white">PHP</h3>
                                 </div>
                                 <div class="d-flex align-items-center new-skills px-2">
+                                    <img src="images/skill/Golang.png" class="images-skill p-2" alt="skill isulalifajri" height="99">
+                                    <h3 class="pe-5 text-white">Golang</h3>
+                                </div>
+                                <div class="d-flex align-items-center new-skills px-2">
                                     <img src="images/skill/laravel.png" class="images-skill p-2" alt="skill isulalifajri" height="99">
                                     <h3 class="pe-5 text-white">Laravel</h3>
                                 </div>
@@ -600,6 +651,10 @@
                                 <div class="d-flex align-items-center new-skills px-2">
                                     <img src="images/skill/MySQL.png" class="images-skill p-2" alt="skill isulalifajri" eight="99">
                                     <h3 class="pe-5 text-white">MySQL</h3>
+                                </div>
+                                <div class="d-flex align-items-center new-skills px-2">
+                                    <img src="images/skill/postgreSQL.png" class="images-skill p-2" alt="skill isulalifajri" eight="99">
+                                    <h3 class="pe-5 text-white">PostgreSQL</h3>
                                 </div>
                                 <div class="d-flex align-items-center new-skills px-2">
                                     <img src="images/skill/livewire.png" class="images-skill p-2" alt="skill isulalifajri" eight="99">
