add project eighth

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                                 <h3 class="card-1 pt-2 mb-3 js-scroll slide-right">About Me</h3>
 
                                 <div class="card-2 js-scroll fade-in-bottom">
-                                    <p>Hello! <b>I'm Isul Alifajri</b>, a Web Developer with over 3 years of experience building websites using PHP, HTML, CSS, JavaScript, jQuery, Laravel, Livewire, CodeIgniter 3, Vuejs 3, and Bootstrap, Tailwind.</p>
+                                    <p>Hello! <b>I'm Isul Alifajri</b>, a Web Developer with over 3 years of experience building websites using PHP, HTML, CSS, JavaScript, jQuery, Laravel, Golang, Python, CodeIgniter 3, Vuejs 3, and Bootstrap, Tailwind.</p>
     
                                     <p>I enjoy visiting peaceful and quiet places, such as hills and valleys, where I can admire the beauty of nature and wide landscapes.</p>
                                 </div>
@@ -252,6 +252,53 @@
                         </div>    
 
                             <div class="row pt-lg-5 js-scroll slide-right flex-wrap">
+                                <!-- project 8 -->
+                                <div class="col-md-4">
+                                    <div class="services-thumb-new">
+                                        <div class="d-flex flex-wrap align-items-center border-bottom mb-4 pb-3">
+                                            <h3 class="mb-0">Project 8</h3>
+
+                                            <div class="services-price-wrap ms-auto">
+                                                <p class="services-price-text mb-0 code"><img src="icons-programs/Python.svg" class="hover-code" alt="python"></p>
+                                                <div class="services-price-overlay"></div>
+                                            </div>
+                                        </div>
+
+                                        <div class="swiper swiper-new">
+                                            <div class="swiper-wrapper">
+                                                <div class="img-new-prj mb-2 swiper-slide">
+                                                    <a data-fslightbox href="project-image-8/dashboard.png">
+                                                        <img src="project-image-8/dashboard.png" alt="img project 7">
+                                                    </a>
+                                                </div>
+                                                <div class="img-new-prj mb-2 swiper-slide">
+                                                    <a data-fslightbox href="project-image-8/products.png">
+                                                        <img src="project-image-8/products.png" alt="img project 7">
+                                                    </a>
+                                                </div>
+                                                <div class="img-new-prj mb-2 swiper-slide">
+                                                    <a data-fslightbox href="project-image-8/transaction-menu.png">
+                                                        <img src="project-image-8/transaction-menu.png" alt="img project 7">
+                                                    </a>
+                                                </div>
+                                                <div class="img-new-prj mb-2 swiper-slide">
+                                                    <a data-fslightbox href="project-image-8/transaction-menu.png">
+                                                        <img src="project-image-8/transaction-menu.png" alt="img project 7">
+                                                    </a>
+                                                </div>
+                                            </div>
+                                            <div class="swiper-pagination swiper-pagination-new"></div>
+                                            <div class="swiper-button-prev swiper-button-prev-new"></div>
+                                            <div class="swiper-button-next swiper-button-next-new"></div>
+                                        </div>
+
+
+                                        <p class="descript-web">Membuat Applikasi POS Desktop dengan Python 3.14.0. Untuk informasi Lebih lanjut tentang Aplikasi ini silahkan klik <b>lihat selengkapnya.</b>
+
+                                        <p><a href="project/project-8.html" target="_blank" class="custom-btn custom-border-btn btn mt-2">lihat selengkapnya</a></p>
+
+                                    </div>
+                                </div>
                                 <!-- project 7 -->
                                 <div class="col-md-4">
                                     <div class="services-thumb-new">
@@ -340,7 +387,7 @@
                                         </div>
 
 
-                                        <p class="descript-web">Membuat Website News dengan Laravel v12 dan inertia VueJs 3. Untuk informasi Lebih lanjut tentang website ini silahkan klik <b>lihat selengkapnya.</b>
+                                        <p class="descript-web">Membuat Website Portal Berita dengan Laravel v12 dan inertia VueJs 3. Untuk informasi Lebih lanjut tentang website ini silahkan klik <b>lihat selengkapnya.</b>
 
                                         <p><a href="project/project-6.html" target="_blank" class="custom-btn custom-border-btn btn mt-2">lihat selengkapnya</a></p>
 
@@ -641,6 +688,10 @@
                                     <h3 class="pe-5 text-white">Golang</h3>
                                 </div>
                                 <div class="d-flex align-items-center new-skills px-2">
+                                    <img src="images/skill/Python.svg" class="images-skill p-2" alt="skill isulalifajri" height="99">
+                                    <h3 class="pe-5 text-white">Python</h3>
+                                </div>
+                                <div class="d-flex align-items-center new-skills px-2">
                                     <img src="images/skill/laravel.png" class="images-skill p-2" alt="skill isulalifajri" height="99">
                                     <h3 class="pe-5 text-white">Laravel</h3>
                                 </div>
@@ -655,6 +706,10 @@
                                 <div class="d-flex align-items-center new-skills px-2">
                                     <img src="images/skill/postgreSQL.png" class="images-skill p-2" alt="skill isulalifajri" eight="99">
                                     <h3 class="pe-5 text-white">PostgreSQL</h3>
+                                </div>
+                                <div class="d-flex align-items-center new-skills px-2">
+                                    <img src="images/skill/SQLite.svg" class="images-skill p-2" alt="skill isulalifajri" eight="99">
+                                    <h3 class="pe-5 text-white">SQLite</h3>
                                 </div>
                                 <div class="d-flex align-items-center new-skills px-2">
                                     <img src="images/skill/livewire.png" class="images-skill p-2" alt="skill isulalifajri" eight="99">
